[master]
    - Add some predefined look and feels in preference window
    - Fixes #1131: MacOSX: JabRef minimizes when clicking on x
    - Dropped jayatana version 1.2.4 as version 2.x superseeds it
    - Feature: Trim journal names before looking up the abbreviation
    - Minor fixes regarding the status output of marking/unmarking entries
    - Internal default key bindings are honored again
    - Default key binding for "Find unlinked files" is "shift F7"
2.11 beta 2
    - Feature: Option to clean URLs generated by Google (patch #204)
    - Fix for bug #1272: JabRef now launches on Mac OS X
    - Updated DBLPfetcher to new DBLP functionality
    - Feature: Ability to reorder the panels in the side pane
    - Feature: Option to save selected entries as plain BibTex without JabRef metadata
2.11 beta
    - Some UI updates (mainly removing unnecessary boundaries)
    - Feature: Gridlines are now optional (and disabled by default)
    - Fix for bug #1248: Key bindings not modified
    - Fix for bug #876: Windows 7/8/10 - Pinning Jabref to the taskbar
    - Feature: Option to change the table row height padding
    - Feature: Make it possible to hide the toolbar
    - Fix for bug #1270: Cleanup entries error 3
    - Fix for bug #919: Accents don't export to RTF (by ruy.takata)
    - Change the CrossRef content negotiation for bibtex DOI import (by sheffien)
    - Fix for bug #1253: Cleanup entries error 2 (by ruy.takata)
    - Fix for bug 1213 (sourceforge): Fix encoding for DOI import
    - Feature #809: import pubmed central id (pmc) field from medline
    - Fix undoing Cleanup/Convert to Biblatex
    - Adapted pattern to parse DBLP entries
    - Partial fix for bug 913: fixed export for .ods and .sxc (by yaragg)
    - Fix for bug 1240: Accepting string with length of one character (by lhaddad).
    - Fix for bug 958: ArrayIndexOutOfBoundsException on "Content Selector Dialog"
    - Fix for bug 949: Exception properly logged