@@ -1,5 +1,6 @@
 [master]
-    - Add some predefined look and feels in preference window
+    - Fix for bug #1278 Crash after changing LookAndFeel (showing a proper error message if L&F is not available)
+    - Adds some predefined look and feels in preference window (lists only available L&Fs)
     - Fixes #1131: MacOSX: JabRef minimizes when clicking on x
     - Dropped jayatana version 1.2.4 as version 2.x superseeds it
     - Feature: Trim journal names before looking up the abbreviation
